kubernetes/apps/downloads/qbittorrent/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittorrent
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            app.kubernetes.io/name: qbtools
        - matchLabels:
            app.kubernetes.io/name: tqm
        - matchLabels:
            app.kubernetes.io/name: autobrr
        - matchLabels:
            app.kubernetes.io/name: cross-seed
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    # qBittorrent
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cross-seed
      toPorts:
        - ports:
            - port: "2468"
              protocol: TCP
